--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 		<svg id="svgized_2" xmlns="http://www.w3.org/2000/svg"></svg>
 		<canvas id="svgized_canvas"></canvas>
 		<script>
-			svgize('troll.jpg', 'svgized_canvas', 'svgized', 2).gradient();
-			svgize('troll.jpg', 'svgized_canvas', 'svgized_2', 2).pixelize();
+			svgize.gradient('troll.jpg', 'svgized_canvas', 'svgized', 2);
+			svgize.pixelize('troll.jpg', 'svgized_canvas', 'svgized_2', 2);
 		</script>
 	</body>
 </html>
